# manbaflow

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: ci.yml
deploy/: Caddyfile  install.sh  manage.sh
docker/agent-runtime/: Dockerfile
docs/: DEPLOYMENT.md  GITLAB_WRITES.md  IDENTITY.md  INSTALLATION.md  INTERACTIONS.md  NOTIFICATIONS.md  OFFICE.md  SHOWCASE.md  WORKER_SANDBOX.md
src/: app.rs  dashboard.rs  domain.rs  error.rs  event.rs  executor.rs  gitlab.rs  ids.rs  lib.rs  main.rs  matcher.rs  notification.rs  planner.rs  scheduler.rs  server.rs  showcase.rs  state.rs  store.rs  tui.rs  worker.rs
src/adapters/: capability.rs  executor.rs  gitlab.rs  gitlab_write.rs  identity.rs  interaction.rs  migration.rs  mod.rs  office.rs  postgres_store.rs  sandbox.rs  store.rs  tenant.rs  worktree.rs
src/app/: actions.rs  commit.rs  credentials.rs  interactions.rs  messages.rs  notifications.rs  policy.rs  tracking.rs
src/application/: dashboard.rs  matcher.rs  mod.rs  tracker.rs
src/application/app/: artifacts.rs  authority.rs  calendars.rs  commit.rs  credentials.rs  directory.rs  flights.rs  gitlab_writes.rs  interactions.rs  mod.rs  notifications.rs  office.rs  setup.rs  tracking.rs
src/core/: calendar.rs  domain.rs  error.rs  event.rs  mod.rs  state.rs
src/interfaces/: console.rs  mod.rs  scim.rs  server.rs  showcase.rs  tui.rs  worker.rs
src/interfaces/web/: console.css  console.html  console.js
tests/: postgres_data_plane.rs
