[package]
name = "manbaflow"
version = "0.1.0"
edition = "2024"
description = "Enterprise Human-Agent Flow control plane"
license = "MIT"
repository = "https://github.com/manbaflow/manbaflow"
readme = "README.md"

[[bin]]
name = "mamba"
path = "src/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.30.2", features = ["crossterm_0_29"] }
rusqlite = { version = "0.40", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
strip = true
