[package]
name = "manbaflow"
version = "0.1.0"
edition = "2024"
autobins = false
description = "Enterprise Human-Agent Flow control plane"
license = "MIT"
repository = "https://github.com/manbaflow/manbaflow"
readme = "README.md"

[[bin]]
name = "mamba"
path = "src/bin/mamba/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
hmac = "0.13"
ratatui = { version = "0.30.2", features = ["crossterm_0_29"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rusqlite = { version = "0.40", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.11"
subtle = "2.6"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
